[package]
name = "cyclogenese-rust"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
authors = ["Luka Chassaing <contact@luka-chassaing.fr>"]
description = "Simulation pédagogique de cyclogenèse barocline en Rust"
repository = "https://github.com/LukaChassaing/cyclogenese-rust"

[dependencies]